--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_API_URL=http://localhost:9055/
 REACT_APP_REGISTER_API_URL=http://localhost:9055/api/User/Register
-REACT_APP_LOGIN=http://localhost:9055/api/Users/Login
+REACT_APP_LOGIN_API_URL=http://localhost:9055/api/User/Login
