DashboardAdmin on front done

--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -1,3 +1,10 @@
 REACT_APP_BASE_API_URL=http://localhost:9055/
 REACT_APP_REGISTER_API_URL=http://localhost:9055/api/User/Register
 REACT_APP_LOGIN_API_URL=http://localhost:9055/api/User/Login
+REACT_APP_GET_ALL_DRIVERS=http://localhost:9055/api/User/GetAllDrivers
+REACT_APP_CHANGE_DRIVER_STATUS=http://localhost:9055/api/User/BlockUser
+REACT_APP_GET_GET_NOT_VERIFIED_AND_VERIFIED_DRIVER=http://localhost:9055/api/User/GetAllUsers
+REACT_APP_VERIFY_DRIVER=http://localhost:9055/api/User/VerifyDriver
+REACT_APP_GET_USER_INFO=http://localhost:9055/api/User/GetUserInfo
+REACT_APP_GET_USER_UPDATE=http://localhost:9055/api/User/UpdatedUser
+REACT_APP_GET_ALL_RIDES_ADMIN=http://localhost:9055/api/Driving/GetCompletedRidesForAdmin
