DashboardRidedr on front done/ chat todo

--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -8,3 +8,10 @@ REACT_APP_VERIFY_DRIVER=http://localhost:9055/api/User/VerifyDriver
 REACT_APP_GET_USER_INFO=http://localhost:9055/api/User/GetUserInfo
 REACT_APP_GET_USER_UPDATE=http://localhost:9055/api/User/UpdatedUser
 REACT_APP_GET_ALL_RIDES_ADMIN=http://localhost:9055/api/Driving/GetCompletedRidesForAdmin
+REACT_APP_GET_ESTIMATION_PRICE=http://localhost:9055/api/Driving/GetEstimatedPrice
+REACT_APP_ACCEPT_SUGGESTED_DRIVE=http://localhost:9055/api/Driving/AcceptSuggestedDrive
+REACT_APP_CURRENT_TRIP=http://localhost:9055/api/Driving/GetCurrentTrip
+REACT_APP_GET_ALL_RIDES_RIDER=http://localhost:9055/api/Driving/GetCompletedRidesForRider
+REACT_APP_GET_ALL_RIDES_DRIVER=http://localhost:9055/api/Driving/GetCompletedRidesForDriver
+REACT_APP_GET_ALL_UNRATED_TRIPS=http://localhost:9055/api/Driving/GetAllNotRatedTrips
+REACT_APP_SUMBIT_RATING=http://localhost:9055/api/Driving/SubmitRating
