DashboardDriver on front done/ chat todo

--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -15,3 +15,6 @@ REACT_APP_GET_ALL_RIDES_RIDER=http://localhost:9055/api/Driving/GetCompletedRide
 REACT_APP_GET_ALL_RIDES_DRIVER=http://localhost:9055/api/Driving/GetCompletedRidesForDriver
 REACT_APP_GET_ALL_UNRATED_TRIPS=http://localhost:9055/api/Driving/GetAllNotRatedTrips
 REACT_APP_SUMBIT_RATING=http://localhost:9055/api/Driving/SubmitRating
+REACT_APP_CURRENT_TRIP_DRIVER=http://localhost:9055/api/Driving/GetCurrentTripDriver
+REACT_APP_GET_ALL_RIDES_UNCOMPLETED=http://localhost:9055/api/Driving/GetAllUncompletedRides
+REACT_APP_ACCEPT_RIDE_DRIVER=http://localhost:9055/api/Driving/AcceptNewRide
