GoogleRegister on front /css todo

--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -18,3 +18,4 @@ REACT_APP_SUMBIT_RATING=http://localhost:9055/api/Driving/SubmitRating
 REACT_APP_CURRENT_TRIP_DRIVER=http://localhost:9055/api/Driving/GetCurrentTripDriver
 REACT_APP_GET_ALL_RIDES_UNCOMPLETED=http://localhost:9055/api/Driving/GetAllUncompletedRides
 REACT_APP_ACCEPT_RIDE_DRIVER=http://localhost:9055/api/Driving/AcceptNewRide
+REACT_APP_CLIENT_ID=495620555598-4c4h0uhsnjnhb5li6dovhsgppidjkfv1.apps.googleusercontent.com
