--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "gapi-script": "^1.2.0",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
